:recycle: refactoring: refactoring classes associated with the node, following code review