@@ -1,10 +1,7 @@
 package com.handongapp.cms.service.impl;
 
 import com.handongapp.cms.domain.TbNode;
-import com.handongapp.cms.dto.NodeCreateRequest;
-import com.handongapp.cms.dto.NodeResponse;
-import com.handongapp.cms.dto.NodeUpdateRequest;
-import com.handongapp.cms.dto.mapper.NodeMapper;
+import com.handongapp.cms.dto.NodeDto;
 import com.handongapp.cms.repository.TbNodeRepository;
 import com.handongapp.cms.service.NodeService;
 import com.handongapp.cms.service.validator.NodeDataValidator;
@@ -12,60 +9,59 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import jakarta.persistence.EntityNotFoundException;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
-@Transactional
 public class NodeServiceImpl implements NodeService {
 
-    private final TbNodeRepository repo;
-    private final NodeMapper mapper;
+    private final TbNodeRepository tbNodeRepository;
 
     @Override
-    public NodeResponse create(String nodeGroupId, NodeCreateRequest req) {
-        NodeDataValidator.validate(req.type(), req.data());
-        TbNode entity = mapper.toEntity(req);
-        entity.setNodeGroupId(nodeGroupId);
-        if (entity.getCommentPermitted() == null)
-            entity.setCommentPermitted(Boolean.TRUE);
-        TbNode saved = repo.save(entity);
-        return mapper.toDto(saved);
+    @Transactional
+    public NodeDto.Response create(NodeDto.CreateRequest req) {
+        NodeDataValidator.validate(req.getType(), req.getData());
+        TbNode entity = TbNode.fromCreateRequest(req);
+        TbNode savedNode = tbNodeRepository.save(entity);
+        return savedNode.toDto();
     }
 
     @Override
     @Transactional(readOnly = true)
-    public NodeResponse get(String id) {
-        return mapper.toDto(findActive(id));
+    public NodeDto.Response get(String nodeId) {
+        TbNode node = tbNodeRepository.findByIdAndDeleted(nodeId, "N")
+                .orElseThrow(() -> new EntityNotFoundException("Node not found with id: " + nodeId));
+        return node.toDto();
     }
 
     @Override
     @Transactional(readOnly = true)
-    public List<NodeResponse> listByGroup(String nodeGroupId) {
-        return repo.findByNodeGroupIdAndDeleted(nodeGroupId, "N")
-                   .stream()
-                   .map(mapper::toDto)
-                   .toList();
+    public List<NodeDto.Response> listByGroup(String nodeGroupId) {
+        return tbNodeRepository.findByNodeGroupIdAndDeletedOrderByOrderAsc(nodeGroupId, "N")
+                .stream()
+                .map(TbNode::toDto)
+                .collect(Collectors.toList());
     }
 
     @Override
-    public NodeResponse update(String id, NodeUpdateRequest req) {
-        TbNode entity = findActive(id);
-        if (req.data() != null)
-            NodeDataValidator.validate(entity.getType(), req.data());
-        mapper.updateEntityFromDto(req, entity);
-        return mapper.toDto(entity);
+    @Transactional
+    public NodeDto.Response update(String nodeId, NodeDto.UpdateRequest req) {
+        TbNode entity = tbNodeRepository.findByIdAndDeleted(nodeId, "N")
+                .orElseThrow(() -> new EntityNotFoundException("Node not found with id: " + nodeId));
+        if (req.getData() != null) {
+            NodeDataValidator.validate(entity.getType(), req.getData());
+        }
+        entity.updateFromUpdateRequest(req);
+        return entity.toDto();
     }
 
     @Override
-    public void deleteSoft(String id) {
-        TbNode entity = findActive(id);
+    @Transactional
+    public void deleteSoft(String nodeId) {
+        TbNode entity = tbNodeRepository.findByIdAndDeleted(nodeId, "N")
+                .orElseThrow(() -> new EntityNotFoundException("Node not found with id: " + nodeId));
         entity.setDeleted("Y");
-    }
-
-    private TbNode findActive(String id) {
-        return repo.findById(id)
-                .filter(n -> "N".equals(n.getDeleted()))
-                .orElseThrow(() -> new IllegalArgumentException("Node not found or deleted: " + id));
     }
 }
